# Asteroids

./: .clang-format  .gitignore  CMakeLists.txt  Collision.cpp  Collision.h  GameSettings.cpp  GameSettings.hpp  LICENSE  README.md  ToDo.txt  asteroids.cfg  basevalues.hpp  build.sh  entities.cpp  entities.hpp  main.cpp  menu.hpp  sounds.hpp  textures.hpp
src/: Collision.cpp  Collision.h  GameSettings.cpp  GameSettings.hpp  control.hpp  entities.hpp  main.cpp  menu.hpp  sounds.cpp  sounds.hpp  textures.hpp
src/entities/: Asteroid.cpp  Asteroid.hpp  Bullet.cpp  Bullet.hpp  Entity.cpp  Entity.hpp  Player.cpp  Player.hpp  PowerUp.cpp  PowerUp.hpp  UFO.cpp  UFO.hpp  utils.cpp  utils.hpp
src/ui/: GameOver.cpp  GameOver.hpp  GlobalMenuData.cpp  GlobalMenuData.hpp  LeaderBoard.cpp  LeaderBoard.hpp  MainMenu.cpp  MainMenu.hpp  Menu.cpp  Menu.hpp  MenuItem.cpp  MenuItem.hpp  MenuUtils.cpp  MenuUtils.hpp  ProgressBar.cpp  ProgressBar.hpp  SaveScore.cpp  SaveScore.hpp  Settings.cpp  Settings.hpp
src/utils/: Collision.cpp  Collision.h  GameSettings.cpp  GameSettings.hpp  control.cpp  control.hpp  sounds.cpp  sounds.hpp  textures.cpp  textures.hpp
